--- a/project.html
+++ b/project.html
@@ -360,8 +360,8 @@
                         <span class="tech-tag">Responsive Design</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank" class="project-link">Github Repository</a>
-                        <a href="#" target="_blank" class="project-link">Live Site</a>
+                        <a href="https://github.com/AmolMane30/Amol_Developer_Portfolio" target="_blank" class="project-link">Github Repository</a>
+                        <a href="https://amolmane30.github.io/Amol_Developer_Portfolio/" target="_blank" class="project-link">Live Site</a>
                     </div>
                 </div>
             </div>
@@ -392,5 +392,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
