--- a/project.html
+++ b/project.html
@@ -283,21 +283,19 @@
                     <div class="project-icon">📦</div>
                     <h3 class="project-title">File Packer-Unpacker</h3>
                     <p class="project-description">
-                        Java-based file utility tool that packs multiple files into a single encrypted archive and
-                        unpacks them with metadata preserved. Features a GUI for user-friendly interaction and enhanced
+                        Java-based file utility tool that packs multiple files into a single archive and
+                        unpacks them with metadata preserved. Features a CUI for user-friendly interaction and enhanced
                         security.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
-                        <span class="tech-tag">Swing GUI</span>
+                        <span class="tech-tag">CUI</span>
                         <span class="tech-tag">File Handling</span>
                         <span class="tech-tag">Encryption</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/AmolMane30/PackerUnpacker" target="_blank"
-                            class="project-link">Github Repository</a>
-                        <a href="https://github.com/AmolMane30/PackerUnpacker/blob/main/PackerUnpaker.java"
-                            target="_blank" class="project-link">View Code</a>
+                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker">Github Repository</a>
+                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker">View Code</a>
                     </div>
                 </div>
 
@@ -395,3 +393,4 @@
 
 
 </html>
+
