--- a/project.html
+++ b/project.html
@@ -294,8 +294,10 @@
                         <span class="tech-tag">Encryption</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker">Github Repository</a>
-                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker">View Code</a>
+                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker" target="_blank"
+                            class="project-link">Github Repository</a>
+                        <a href="https://github.com/AmolMane30/File_Packer_Unpacker"
+                            target="_blank" class="project-link">View Code</a>
                     </div>
                 </div>
 
@@ -393,4 +395,5 @@
 
 
 </html>
+
 
