--- a/project.html
+++ b/project.html
@@ -304,11 +304,11 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-icon">💬</div>
-                    <h3 class="project-title">Chat Messenger</h3>
+                    <h3 class="project-title">ChatBird Messenger</h3>
                     <p class="project-description">
-                        Java-based peer-to-peer chat application for real-time text communication using Socket
-                        Programming. Maintains conversation logs and runs on any system with JRE. Platform and
-                        architecture independent.
+                        ChatBird Messenger is a Java-based real-time chat application built using TCP Socket Programming.
+                        It enables peer-to-peer text communication through a simple GUI and maintains a log file of all chats with timestamps. 
+                        The project demonstrates key concepts of TCP networking, multithreading, and file handling in Java.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
@@ -317,8 +317,8 @@
                         <span class="tech-tag">Multi-threading</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank" class="project-link">GitHub Repository</a>
-                        <a href="#" target="_blank" class="project-link">View Code</a>
+                        <a href="https://github.com/AmolMane30/ChatBird-Messenger" target="_blank" class="project-link">GitHub Repository</a>
+                        <a href="https://github.com/AmolMane30/ChatBird-Messenger/blob/main/Server.java" target="_blank" class="project-link">View Code</a>
                     </div>
                 </div>
 
@@ -395,6 +395,7 @@
 
 
 </html>
+
 
 
 
