--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
                         Chat Messenger
                     </div>
                     <div class="vertical-desc">
-                        This project is a Java-based peer-to-peer chat application that enables real-time text-based
-                        communication between users using Java Socket Programming. Along with providing basic chat
-                        functionality, it also maintains a log file that records all conversation details in a periodic
-                        fashion for future reference.The application is platform and architecture independent, running
+                        ChatBird Messenger is a Java-based real-time chat application built using TCP Socket Programming. 
+                        It enables peer-to-peer text communication through a simple GUI and maintains a log file of all chats with timestamps.
+                        The project demonstrates key concepts of TCP networking, multithreading, and file handling in Java.
+                        The application is platform and architecture independent, running
                         on any system with a Java Runtime Environment (JRE).
                     </div>
                 </div>
